--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Cabin:400,600|Karla|Open+Sans');
+
+* {
+    box-sizing: border-box;
+}
+
 html,
 body {
     margin: 0;
     padding: 0;
+    background-color: rgb(235, 235, 235);
 }
 
 .page-wrapper {
@@ -10,30 +17,92 @@ body {
 }
 
 #navbar {
-    width: 20%;
+    width: 300px;
     height: 100%;
-    border-right: 2px solid rgb(197, 197, 197);
+    border-right: 2px solid white;
     position: fixed;
     top: 0;
     z-index: 1;
+    background-color: #34675C;
 }
 
 #main-doc {
-    width: 80%;
-    margin-left: 20%;
+    width: 100%;
+    margin-left: 300px;
 }
 
 .navigation-header {
-    height: 60px;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: "Cabin", Verdana, sans-serif;
+    font-size: 25px;
+    letter-spacing: 2px;
+    font-weight: 800;
+    color: white;
+}
+
+.first-section {
+    border-top: 2px solid white;
 }
 
 .nav-content {
+    position: relative;
+    height: 50px;
+    border-bottom: 2px dashed white;
+}
+
+.nav-link {
+    padding-left: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
-    height: 40px;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+    z-index: 10;
+    text-decoration: none;
+    color: white;
+    font-family: "Karla", Verdana, sans-serif;
+    font-size: 17px;
+}
+
+.nav-link:hover {
+    font-size: 18px;
+}
+
+.main-section {
+    margin: 30px;
+}
+
+.first-section-main {
+    margin-top: 50px;
+}
+
+.main-section p {
+    padding: 3px 0 3px 0;
+}
+
+.main-section ul li {
+    padding: 0 0 15px 0;
+}
+
+.section-paragraph,
+.section-list {
+    text-align: justify;
+    font-family: "Open Sans", Verdana, sans-serif;
+    font-size: 15px;
+}
+
+.section-header {
+    font-family: "Cabin", Verdana, sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+.section-content {
+    padding-left: 20px;
 }
