--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Cabin:400,600|Karla|Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Cabin:400,600|Karla|Open+Sans|Inconsolata');
 
 * {
     box-sizing: border-box;
@@ -12,7 +12,6 @@ body {
 }
 
 .page-wrapper {
-    height: 1000px;
     display: flex;
 }
 
@@ -40,7 +39,11 @@ body {
     font-size: 25px;
     letter-spacing: 2px;
     font-weight: 800;
+}
+
+.navigation-header a {
     color: white;
+    text-decoration: none;
 }
 
 .first-section {
@@ -105,4 +108,18 @@ body {
 
 .section-content {
     padding-left: 20px;
+}
+
+code {
+    white-space: pre;
+    line-height: 2;
+    color: rgb(255, 71, 71);
+    font-family: "Inconsolata", monospace;
+}
+
+.code-wrapper {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 25px rgb(211, 211, 211);
+    padding: 15px 0 30px 15px;
 }
