new content up to if else

--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ body {
 code {
     white-space: pre;
     line-height: 2;
-    color: rgb(255, 71, 71);
+    color: rgb(0, 25, 252);
     font-family: "Inconsolata", monospace;
 }
 
@@ -121,5 +121,13 @@ code {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 25px rgb(211, 211, 211);
-    padding: 15px 0 30px 15px;
+    padding: 15px 0 15px 15px;
+}
+
+ul {
+    margin-bottom: 0;
+}
+
+.no-top-margin {
+    margin-top: 0;
 }
