--- a/css/main.css
+++ b/css/main.css
@@ -17,17 +17,19 @@ body {
 
 #navbar {
     width: 300px;
-    height: 100%;
+    height: calc(100% - 70px);
     border-right: 2px solid white;
     position: fixed;
-    top: 0;
+    top: 70px;
     z-index: 1;
     background-color: #34675C;
+    overflow: auto;
 }
 
 #main-doc {
     width: 100%;
     margin-left: 300px;
+    overflow: hidden;
 }
 
 .navigation-header {
@@ -39,6 +41,12 @@ body {
     font-size: 25px;
     letter-spacing: 2px;
     font-weight: 800;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    background-color: rgb(22, 44, 39);
+    width: 300px;
+    border-right: 2px solid white;
 }
 
 .navigation-header a {
@@ -74,6 +82,7 @@ body {
 
 .nav-link:hover {
     font-size: 18px;
+    font-weight: 700;
 }
 
 .main-section {
@@ -130,4 +139,21 @@ ul {
 
 .no-top-margin {
     margin-top: 0;
+}
+
+@media screen and (max-width: 600px) {
+    #navbar {
+        width: 100%;
+        height: 250px;
+    }
+
+    #main-doc {
+        width: 100%;
+        margin-top: 280px;
+        margin-left: 0;
+    }
+
+    .navigation-header {
+        width: 100%;
+    }
 }
